# Note-book

./: .gitignore  main.py  preparations.py  pyproject.toml
content/: errors.py  keyboards.py  onboarding.py
handlers/: __init__.py  changing.py  new_row.py  onboarding.py  searching.py
keyboards/: inline.py  reply.py
models/: config.py  filters.py  mongo_database.py
utils/: auxiliary.py  yaml_helper.py
